# ialib_4a

./: CMakeCache.txt  CMakeLists.txt  README.md  [Exemple] Implémentation de Policy Evaluation sur Line World en Python.ipynb  bellman2.py  bellman2_gridworld.py  bellman2_lineworld.py  ialib.c  ialib.h  line_world.c  line_world.h  test.c
tests/: test.c  test_iter.c  test_iter_chifoumi.c  test_iter_grid.c  test_iter_line.c
